--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -47,15 +47,30 @@
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script>
 async function handleGoogleLogin(response) {
-  const credential = response.credential; // token di Google
+  const googleBtn = document.getElementById('googleLoginContainer');
+  googleBtn.innerHTML = `
+    <div class="flex flex-col items-center justify-center py-2 text-gray-500">
+      <div class="spinner-container mb-1">
+        <div class="spinner-dot"></div>
+        <div class="spinner-dot"></div>
+        <div class="spinner-dot"></div>
+      </div>
+      <p>Signing in...</p>
+    </div>
+  `;
+
+  const credential = response.credential; 
   const resp = await apiPost("loginWithGoogle", { credential });
+
   if (!resp.success) {
     alert("Google login fallito: " + resp.error);
+    // se fallisce, rimetti di nuovo il bottone
+    location.reload(); 
     return;
   }
 
   document.getElementById('googleLoginContainer').classList.add('hidden');
-  
+
   CURRENT_COACH_ID = resp.coachId;
   CURRENT_COACH_NAME = resp.coachName;
   CURRENT_COACH_ROLE = resp.rateRole;
@@ -63,6 +78,7 @@ async function handleGoogleLogin(response) {
   await fetchMonthlyEarnings();
   await loadStudentIds();
 }
+
 </script>
 
   
