--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -61,6 +61,7 @@ async function handleGoogleLogin(response) {
 
   const credential = response.credential; 
   const resp = await apiPost("loginWithGoogle", { credential });
+  
 
   if (!resp.success) {
     alert("Google login fallito: " + resp.error);
@@ -69,14 +70,14 @@ async function handleGoogleLogin(response) {
     return;
   }
 
-    console.log("DEBUG from backend:", resp.debugEmail, resp.debugRow);
-    alert("Email da Google: " + resp.debugEmail + "\nRiga trovata: " + resp.debugRow);
-
   document.getElementById('googleLoginContainer').classList.add('hidden');
 
   CURRENT_COACH_ID = resp.coachId;
   CURRENT_COACH_NAME = resp.coachName;
   CURRENT_COACH_ROLE = resp.rateRole;
+  coachNameDisplay.textContent = CURRENT_COACH_NAME;
+  callSectionCoachNameDisplay.textContent = CURRENT_COACH_NAME;
+
   switchSection(dashboardSection);
   await fetchMonthlyEarnings();
   await loadStudentIds();
