--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Call Logging Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+<script>
+  tailwind.config = {
+    darkMode: 'media'  // usa le impostazioni del browser (OS)
+  }
+</script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     body { font-family:'Inter',sans-serif; background:#f3f4f6; }
@@ -21,8 +26,8 @@
     @keyframes bounce { 0%,100%{ transform:translateY(0);} 50%{ transform:translateY(-10px);} }
   </style>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
-<div class="container bg-white p-8 md:p-12 rounded-2xl shadow-xl space-y-8 border border-gray-200">
+<body class="bg-gray-100 dark:bg-gray-900 min-h-screen flex items-center justify-center p-4">
+<div class="container bg-white dark:bg-gray-800 p-8 md:p-12 rounded-2xl shadow-xl space-y-8 border border-gray-200 dark:border-gray-700">
 
 <!-- GOOGLE AUTH -->
 <div id="googleLoginContainer" class="flex justify-center">
@@ -90,8 +95,8 @@ async function handleGoogleLogin(response) {
   <!-- LOGIN -->
   <div id="loginSection">
     <div class="text-center">
-      <h1 class="text-3xl md:text-4xl font-bold text-gray-800">Login</h1>
-      <p class="mt-2 text-gray-500">Use your coach credentials.</p>
+      <h1 class="text-3xl md:text-4xl font-bold text-gray-800 dark:text-gray-100">Login</h1>
+      <p class="mt-2 text-gray-500 dark:text-gray-400">Use your coach credentials.</p>
     </div>
     <form id="loginForm" class="mt-8 space-y-4">
       <div>
