--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -474,7 +474,7 @@ function switchSection(showEl) {
   showEl.classList.remove('hidden');
 
   // opzionale: scroll top quando apro una sezione nuova
-  window.scrollTo({ top: 0, behavior: 'instant' });
+  window.scrollTo({ top: 0, behavior: 'auto' });
 }
 
 
